More recipes + snow cream

--- a/src/main/resources/assets/cobaltfoods/lang/en_us.json
+++ b/src/main/resources/assets/cobaltfoods/lang/en_us.json
@@ -6,5 +6,6 @@
   "item.cobaltfoods.pumpkin_dough": "Raw Pumpkin Dough",
   "item.cobaltfoods.apple_dough": "Raw Apple Dough",
   "item.cobaltfoods.apple_bread": "Apple Bread",
-  "item.cobaltfoods.pumpkin_bread": "Pumpkin Bread"
+  "item.cobaltfoods.pumpkin_bread": "Pumpkin Bread",
+  "item.cobaltfoods.snow_cream": "Snow Cream"
 }
