--- a/src/main/resources/assets/cobaltfoods/lang/en_us.json
+++ b/src/main/resources/assets/cobaltfoods/lang/en_us.json
@@ -7,5 +7,10 @@
   "item.cobaltfoods.apple_dough": "Raw Apple Dough",
   "item.cobaltfoods.apple_bread": "Apple Bread",
   "item.cobaltfoods.pumpkin_bread": "Pumpkin Bread",
-  "item.cobaltfoods.snow_cream": "Snow Cream"
+  "item.cobaltfoods.snow_cream": "Snow Cream",
+  "item.cobaltfoods.raw_bacon": "Raw Bacon",
+  "item.cobaltfoods.crispy_bacon": "Crispy Bacon",
+  "item.cobaltfoods.rotten_apple": "Rotten Apple",
+  "item.cobaltfoods.iron_apple": "Iron Apple",
+  "item.cobaltfoods.obsidian_apple": "Obsidian Apple"
 }
