--- a/src/main/resources/assets/cobaltfoods/lang/en_us.json
+++ b/src/main/resources/assets/cobaltfoods/lang/en_us.json
@@ -12,5 +12,9 @@
   "item.cobaltfoods.crispy_bacon": "Crispy Bacon",
   "item.cobaltfoods.rotten_apple": "Rotten Apple",
   "item.cobaltfoods.iron_apple": "Iron Apple",
-  "item.cobaltfoods.obsidian_apple": "Obsidian Apple"
+  "item.cobaltfoods.obsidian_apple": "Obsidian Apple",
+  "item.cobaltfoods.mashed_potatoes": "Mashed Potatoes",
+  "item.cobaltfoods.cheese": "Cheese",
+  "item.cobaltfoods.loaded_mashed_potatoes": "Loaded Mashed Potatoes",
+  "item.cobaltfoods.grilled_cheese": "Grilled Cheese"
 }
