--- a/src/main/resources/assets/cobaltfoods/lang/en_us.json
+++ b/src/main/resources/assets/cobaltfoods/lang/en_us.json
@@ -16,5 +16,13 @@
   "item.cobaltfoods.mashed_potatoes": "Mashed Potatoes",
   "item.cobaltfoods.cheese": "Cheese",
   "item.cobaltfoods.loaded_mashed_potatoes": "Loaded Mashed Potatoes",
-  "item.cobaltfoods.grilled_cheese": "Grilled Cheese"
+  "item.cobaltfoods.grilled_cheese": "Grilled Cheese",
+  "item.cobaltfoods.ham_and_cheese": "Ham and Cheese",
+  "item.cobaltfoods.melon_juice": "Melon Juice",
+  "item.cobaltfoods.carrot_juice": "Carrot Juice",
+  "item.cobaltfoods.apple_juice": "Apple Juice",
+  "item.cobaltfoods.glow_berry_juice": "Glow Berry Juice",
+  "item.cobaltfoods.sweet_berry_juice": "Sweet Berry Juice",
+  "item.cobaltfoods.kelp_juice": "Kelp Juice",
+  "item.cobaltfoods.zombie_jerky": "Zombie Jerky"
 }
