--- a/src/main/resources/assets/cobaltfoods/lang/en_us.json
+++ b/src/main/resources/assets/cobaltfoods/lang/en_us.json
@@ -20,9 +20,22 @@
   "item.cobaltfoods.ham_and_cheese": "Ham and Cheese",
   "item.cobaltfoods.melon_juice": "Melon Juice",
   "item.cobaltfoods.carrot_juice": "Carrot Juice",
+  "item.cobaltfoods.beetroot_juice": "Beetroot Juice",
   "item.cobaltfoods.apple_juice": "Apple Juice",
   "item.cobaltfoods.glow_berry_juice": "Glow Berry Juice",
   "item.cobaltfoods.sweet_berry_juice": "Sweet Berry Juice",
   "item.cobaltfoods.kelp_juice": "Kelp Juice",
-  "item.cobaltfoods.zombie_jerky": "Zombie Jerky"
+  "item.cobaltfoods.zombie_jerky": "Zombie Jerky",
+  "item.cobaltfoods.paper_cone": "Paper Cone",
+  "item.cobaltfoods.unflavored_snow_cone": "Unflavored Snow Cone",
+  "item.cobaltfoods.apple_snow_cone": "Apple Snow Cone",
+  "item.cobaltfoods.melon_snow_cone": "Melon Snow Cone",
+  "item.cobaltfoods.sweet_berry_snow_cone": "Sweet Berry Snow Cone",
+  "item.cobaltfoods.glow_berry_snow_cone": "Glow Berry Snow Cone",
+  "item.cobaltfoods.sunflower_seeds": "Sunflower Seeds",
+  "item.cobaltfoods.trail_mix": "Trail Mix",
+  "item.cobaltfoods.raw_calamari": "Raw Calamari",
+  "item.cobaltfoods.cooked_calamari": "Cooked Calamari"
+
+
 }
